--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,9 @@
         <h1>SAGE</h1>
         <div id="chat-container">
             <div id="chat-history"></div>
-                        <input type="text" id="user-input" placeholder="Ask SAGE a question...">
+                                                <input type="text" id="user-input" placeholder="Ask SAGE a question...">
+            <button id="git-status-btn">Get Git Status</button>
+            <button id="git-status-btn">Get Git Status</button>
                         <button id="git-status-btn">Get Git Status</button>
             <button id="shutdown-btn">Shutdown Server</button>
         </div>
